--- a/index.html
+++ b/index.html
@@ -890,92 +890,145 @@ return num + ' views';
 // removed invalid comment
 */
 function renderTrendingUI(viewsMap) {
-const listElem = document.getElementById("trendingList");
-listElem.innerHTML = ''; 
+    const listElem = document.getElementById("trendingList");
+    if (!listElem) return;
+    listElem.innerHTML = ''; 
 
-// 1. Sort the full list of ALL songs based on views from the fetched map
-const sortedTrending = allSongsForTrending.slice().sort((a, b) => {
-const viewsA = viewsMap[a.dbName] || 0;
-const viewsB = viewsMap[b.dbName] || 0;
-return viewsB - viewsA;
-});
+    // 1. Sort based on views
+    const sortedTrending = allSongsForTrending.slice().sort((a, b) => {
+        const viewsA = viewsMap[a.dbName] || 0;
+        const viewsB = viewsMap[b.dbName] || 0;
+        return viewsB - viewsA;
+    });
 
-// 2. Limit the list to the top 3 songs
-const top3Trending = sortedTrending.slice(0, 3);
+    // 2. Limit to top 3
+    const top3Trending = sortedTrending.slice(0, 3);
 
+    // 3. Render UI
+    top3Trending.forEach((song, idx) => {
+        const item = document.createElement("li");
+        item.className = "trendingItem";
 
-// 3. Render UI using the top 3 list
-top3Trending.forEach((song, idx) => {
-const item = document.createElement("li");
-item.className = "trendingItem";
+        let playlistIndex = -1;
+        let playlistId = null;
 
-// Find the correct playlist index for playback 
-let playlistIndex = -1;
-let playlistId = null;
+        for (const listId in playlists) {
+            playlistIndex = playlists[listId].findIndex(file => {
+                let fileName = file.replace(".mp3", "");
+                let songNameFromDB = song.name;
 
-// Determine which playlist the song belongs to for the onclick handler
-for (const listId in playlists) {
-playlistIndex = playlists[listId].findIndex(file => {
-let fileName = file.replace(".mp3", "");
-let songNameFromDB = song.name;
+                // Precise filename matching based on your GitHub screenshot
+                if (songNameFromDB === "Harishankar ku irukka?") return fileName === "Harishankar ku irukka";
+                if (songNameFromDB === "LOT-III teaser concert(LOT-III)") return fileName === "LOT-III teaser concert";
+                if (songNameFromDB === "Sanjai's room (Endhu 1cm)") return fileName === "Sanjai";
+                if (songNameFromDB === "Flute anthem(LOT-III)") return fileName === "Flute anthem";
+                if (songNameFromDB === "Bomb (Endhu 1cm)") return fileName === "Bomb3";
+                if (songNameFromDB === "Jishnu Anthem Thalapathy Vijay Vocal") return (fileName === "Jishnu anthem Thalapathy Vijay vocal" || fileName === "Jishnu Anthem Thalapathy Vijay vocal");
 
-if (songNameFromDB === "Harishankar ku irukka?") return fileName === "Harishankar ku irukka";
+                return fileName === songNameFromDB;
+            });
+            if (playlistIndex !== -1) {
+                playlistId = listId;
+                break;
+            }
+        }
 
-if (songNameFromDB === "Harishankar ku irukka?") return fileName === "Harishankar ku irukka";
-if (songNameFromDB === "LOT-III teaser concert(LOT-III)") return fileName === "LOT-III teaser concert";
-if (songNameFromDB === "Sanjai's room (Endhu 1cm)") return fileName === "Sanjai";
-if (songNameFromDB === "Flute anthem(LOT-III)") return fileName === "Flute anthem";
-                if (songNameFromDB === "Jishnu Anthem Thalapathy Vijay Vocal") return fileName === "Jishnu Anthem Thalapathy Vijay vocal";
-                
-                // CRITICAL CHECK for the Thalapathy song's actual file name
-                if (songNameFromDB === "Jishnu Anthem Thalapathy Vijay Vocal") return fileName === "Jishnu anthem Thalapathy Vijay vocal";
+        const artist = getArtist(song.name);
+        const currentViews = viewsMap[song.dbName] || 0;
 
-return fileName === songNameFromDB;
-});
-if (playlistIndex !== -1) {
-playlistId = listId;
-break;
-}
-}
-
-const artist = getArtist(song.name);
-const currentViews = viewsMap[song.dbName] || 0;
-
-item.innerHTML = `
+        item.innerHTML = `
            <div class="trendingRank">#${idx + 1}</div>
            <img class="trendingCover" src="${song.cover}" alt="${song.name}">
            <div class="trendingInfo">
                <div class="trendingTitle">${song.name}</div>
                <div class="trendingViews" id="views-${song.dbName}">${artist} • ${formatViews(currentViews)}</div>
            </div>
-       `;
-item.onclick = (e) => {
-    e.stopPropagation();
-    if (playlistId) {
-        playSong(playlistId, playlistIndex); // Removed the alert restriction
+        `;
+
+        item.onclick = (e) => {
+            e.stopPropagation();
+            if (playlistId) {
+                playSong(playlistId, playlistIndex);
+            }
+        };
+        listElem.appendChild(item);
+    });
+}
+
+async function fetchAndRenderTrending() {
+    if (!window.db) {
+        setTimeout(fetchAndRenderTrending, 100); 
+        return;
     }
-};
-if (playlistId) {
-// Check for "Dropping Soon" restrictions before playing
-const isRestricted = (playlistId === 'list4') || 
-                     (playlistId === 'list1' && 
-                      song.name !== "Flute anthem(LOT-III)" && 
-                      song.name !== "LOT-III teaser concert(LOT-III)");
-
-if (isRestricted) {
-    alert("Dropping soon! 🚀");
-} else {
-    playSong(playlistId, playlistIndex);
-}
-}
-};
-listElem.appendChild(item);
-});
+    try {
+        const docRef = window.doc(window.db, "all_songs_views", "all_song_data");
+        const docSnap = await window.getDoc(docRef);
+        if (docSnap.exists()) {
+            const data = docSnap.data();
+            renderTrendingUI(data.views_map || {}); 
+        } else {
+            renderTrendingUI({});
+        }
+    } catch (e) {
+        console.error("Error fetching trending data:", e);
+    }
 }
 
-/**
-// removed invalid comment
-*/
+async function incrementView(displayName) {
+    if (!window.db || !window.updateDoc || !window.getDoc) return;
+    const dbName = simplifyDisplayName(displayName);
+    if (!dbName) return; 
+    const docRef = window.doc(window.db, "all_songs_views", "all_song_data");
+    try {
+        const docSnap = await window.getDoc(docRef);
+        if (!docSnap.exists()) return;
+        const data = docSnap.data();
+        const viewsMap = data.views_map || {};
+        viewsMap[dbName] = (viewsMap[dbName] || 0) + 1;
+        await window.updateDoc(docRef, { views_map: viewsMap });
+        renderTrendingUI(viewsMap);
+    } catch (e) {
+        console.error(`Error incrementing views:`, e);
+    }
+}
+
+/* UI GENERATION */
+for (let id in playlists) {
+    if (id === 'list1') playlists[id].sort();
+    let listElem = document.getElementById(id);
+    if (!listElem) continue;
+
+    playlists[id].forEach((song, idx) => {
+        let fileName = song.replace(".mp3", "");
+        let displayName = fileName;
+
+        // Apply display formatting (Adding Parentheses back)
+        if (fileName === "Bomb3") displayName = "Bomb (Endhu 1cm)";
+        if (fileName === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
+        if (fileName === "Flute anthem") displayName = "Flute anthem(LOT-III)";
+        if (fileName === "LOT-III teaser concert") displayName = "LOT-III teaser concert(LOT-III)";
+        if (fileName === "Item number 1") displayName = "Item number 1(LOT-III)";
+        if (fileName === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
+        if (fileName === "Jishnu anthem Thalapathy Vijay vocal") displayName = "Jishnu Anthem Thalapathy Vijay Vocal";
+
+        let artist = getArtist(displayName);
+        let div = document.createElement("div");
+        div.className = "track";
+        
+        // Add special color for LOT-III playable songs
+        if (id === 'list1' && (fileName === "Flute anthem" || fileName === "LOT-III teaser concert")) {
+            div.classList.add("playable-new");
+        }
+
+        div.innerHTML = `<div><strong>${displayName}</strong><br><span>${artist}</span></div><span style="font-size:10px;">▶</span>`;
+
+        div.onclick = (e) => {
+            e.stopPropagation();
+            playSong(id, idx);
+        };
+        listElem.appendChild(div);
+    });
+}
 async function fetchAndRenderTrending() {
 if (!window.db) {
 setTimeout(fetchAndRenderTrending, 100); 
@@ -1251,6 +1304,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
