--- a/index.html
+++ b/index.html
@@ -790,21 +790,21 @@ const songAnimations = {
 
 const playlists = {
     list1: [
-        "Anugundu Abhishek(LOT-III).mp3", 
-        "DSK on the move(LOT-III).mp3", 
-        "Hyper Harishankar(LOT-III).mp3",
-        "Intermission(LOT-III).mp3", 
-        "Jishnu Anthem Reprise(LOT-III).mp3", 
-        "The fight(LOT-III).mp3",
-        "King in the universe(LOT-III).mp3", 
-        "King vs Harold(LOT-III).mp3", 
+        "Anugundu Abhishek.mp3", 
+        "DSK on the move.mp3", 
+        "Hyper Harishankar.mp3",
+        "Intermission.mp3", 
+        "Jishnu Anthem Reprise.mp3", 
+        "The fight.mp3",
+        "King in the universe.mp3", 
+        "King vs Harold).mp3", 
         "LOT-III teaser concert.mp3", // Matches your screenshot name
-        "LOT-III Theme(LOT-III).mp3", 
-        "Saavachuruven unna(LOT-III).mp3", 
-        "Sivagasi's Daaha(LOT-III).mp3",
-        "Sivagasi's Dahaa x Saavachuruven unna(LOT-III).mp3",
-        "The namechange(LOT-III).mp3", 
-        "Vadakku Sadhuram il Jishnu(LOT-III).mp3", 
+        "LOT-III Theme.mp3", 
+        "Saavachuruven unna.mp3", 
+        "Sivagasi's Daaha.mp3",
+        "Sivagasi's Dahaa x Saavachuruven unna.mp3",
+        "The namechange.mp3", 
+        "Vadakku Sadhuram il Jishnu.mp3", 
         "Flute anthem.mp3" // Matches your screenshot name
     ],
     list4: [
@@ -1097,6 +1097,7 @@ function formatTime(s) {
 </script>
 </body>
 </html>
+
 
 
 
