--- a/index.html
+++ b/index.html
@@ -796,13 +796,13 @@ const playlists = {
         "Intermission.mp3", 
         "Jishnu Anthem Reprise.mp3", 
         "The fight.mp3",
-        "King in the universe.mp3", 
+        "King in the Universe.mp3", 
         "King vs Harold.mp3", 
         "LOT-III teaser concert.mp3", 
         "LOT-III Theme.mp3", 
         "Saavachuruven unna.mp3", 
         "Sivagasi's Daaha.mp3",
-        "Sivagasi's Dahaa x Saavachuruven unna.mp3",
+        "Sivagasis Daaha x Saavachuruven unna.mp3",
         "The namechange.mp3", 
         "Vadakku Sadhuram il Jishnu.mp3", 
         "Flute anthem.mp3"
@@ -1023,3 +1023,4 @@ function formatTime(s) {
 </script>
 </body>
 </html>
+
