--- a/index.html
+++ b/index.html
@@ -756,11 +756,13 @@ const artists = {
     "Sivagasi's Dahaa x Saavachuruven unna(LOT-III)": "G.R.Adhavh, Shreyas, Jishnu",
     "The namechange(LOT-III)": "Kavinraaj, G.R.Adhavh",
     "Flute anthem(LOT-III)": "G.R.Adhavh",
-    "Item number 1(LOT-III)": "G.R.Adhavh",
+	"Saavadi Saravedi(LOT-III)": "Kavinraaj,G.R.Adhavh",
+    "Item number 1(LOT-III)": "Kavinraaj,G.R.Adhavh",
     "Saavadi Saravedi(LOT-III)": "Kavinraaj, G.R.Adhavh",
     "Jishnu Anthem": "G.R.Adhavh",
     "Bomb (Endhu 1cm)": "Kavinraaj, Kaliyappan, G.R.Adhavh",
     "Sanjai's room (Endhu 1cm)": "Shreyas, G.R.Adhavh",
+	"Harishankar ku irukka?":"Kavinraaj,G.R.Adhavh"
     "default": "G.R.Adhavh"
 };
 
@@ -1019,3 +1021,4 @@ window.closePopup = () => {
 </script>
 </body>
 </html>
+
