--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@ const artists = {
     "Intermission(LOT-III)": "Jishnu, G.R.Adhavh",
     "Saavachuruven unna(LOT-III)": "Jishnu, G.R.Adhavh, Sanjai",
     "Sivagasi's Daaha(LOT-III)": "G.R.Adhavh, Shreyas",
-    "Sivagasi's Dahaa x Saavachuruven unna(LOT-III)": "G.R.Adhavh, Shreyas, Jishnu",
+    "Sivagasis Daaha x Saavachuruven unna(LOT-III)": "G.R.Adhavh, Shreyas, Jishnu",
     "The namechange(LOT-III)": "Kavinraaj, G.R.Adhavh",
     "Flute anthem(LOT-III)": "G.R.Adhavh",
     "Saavadi Saravedi(LOT-III)": "Kavinraaj, G.R.Adhavh",
@@ -1022,6 +1022,7 @@ window.closePopup = () => {
 </script>
 </body>
 </html>
+
 
 
 
