--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@ margin-top: 3px;
         <span>Min</span>
         <span>Sec</span>
     </div>
+        </div>
 <div class="playlistContainer new-release">
     <div class="playlistHeader" onclick="toggleList('list1')">
         <span class="new-badge">NEW!!</span>
@@ -1146,6 +1147,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
