--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 overflow-x: hidden;
 position: relative;
 min-height: 100vh;
+        padding-bottom: 250px;
 }
 
 /* --- THE BEATING HEART BACKGROUND --- */
@@ -1152,6 +1153,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
