--- a/index.html
+++ b/index.html
@@ -672,11 +672,13 @@ const artists = {
 "Happy Birthday Megharajan": "G.R.Adhavh",
 "Bomb (Endhu 1cm)": "Kavinraaj, Kaliyappan, G.R.Adhavh",
 "Sanjai's room (Endhu 1cm)": "Shreyas, G.R.Adhavh",
+"Jishnu the flashback(LOT-III)": "Piano cover by G.R.Adhavh"
 "default": "G.R.Adhavh"
 };
 
 const songAnimations = {
 "Intermission(LOT-III)": "#ff4d6d",
+"Jishnu the flashback(LOT-III)": "#99ff33",
 "Saavachuruven unna(LOT-III)": "#4dd6ff",
 "Sivagasi's Daaha(LOT-III)": "#ffa600",
 "The namechange(LOT-III)": "#bb6bff",
@@ -701,7 +703,7 @@ list1: [
 "King in the universe(LOT-III).mp3", "King vs Harold(LOT-III).mp3", "LOT-III teaser concert.mp3",
 "LOT-III Theme(LOT-III).mp3", "Saavachuruven unna(LOT-III).mp3", "Sivagasi's Daaha(LOT-III).mp3",
 "Sivagasi's Dahaa x Saavachuruven unna(LOT-III).mp3",
-"The namechange(LOT-III).mp3", "Vadakku Sadhuram il Jishnu(LOT-III).mp3", "Flute anthem.mp3"
+"The namechange(LOT-III).mp3", "Vadakku Sadhuram il Jishnu(LOT-III).mp3", "Flute anthem.mp3","Jishnu the flashback.mp3"
 ],
 list4: [
 "Item number 1(LOT-III).mp3", "Saavadi Saravedi(LOT-III).mp3"
@@ -720,6 +722,7 @@ list3: [
 function simplifyDisplayName(displayName) {
 // This must match the field names you created in the 'all_song_data' map!
 if (displayName === "Anugundu Abhishek(LOT-III)") return "AnugunduAbhishek";
+if (displayName === "Jishnu the flashback(LOT-III)") return "AnugunduAbhishek";
 if (displayName === "DSK on the move(LOT-III)") return "DSKOnTheMove";
 if (displayName === "Hyper Harishankar(LOT-III)") return "HyperHarishankar";
 if (displayName === "Intermission(LOT-III)") return "IntermissionLOTIII";
@@ -1153,6 +1156,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
