--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ margin-top: 3px;
 <div class="trailer-banner">
     <img src="tp.jpg" alt="LOT-III Trailer">
     <div class="banner-caption">
-        <span>LOT-III Trailer out now!!</span>
+        <span>LOT-III Full Movie out now!!</span>
     </div>
 </div>
     
@@ -534,7 +534,7 @@ margin-top: 3px;
 
     <div class="trailer-text"><span>▶</span> LOT-III OFFICIAL TRAILER</div>
 
-<a href="https://drive.google.com/file/d/1sl3XzH4e5rl8wIvRxTHvxDzpU0vTlZPv/view?usp=drivesdk" target="_blank" class="trailer-link-box">
+<a href="https://youtu.be/b-TPPBjNvUc" target="_blank" class="trailer-link-box">
 
     <div class="trailer-text"><span>▶</span> LOT-III FULL MOVIE</div>
 
@@ -1004,6 +1004,7 @@ window.closePopup = () => {
 </script>
 </body>
 </html>
+
 
 
 
