--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ margin-top: 3px;
 
     <div class="trailer-text"><span>▶</span> LOT-III OFFICIAL TRAILER</div>
 
-<a href="https://youtu.be/b-TPPBjNvUc" target="_blank" class="trailer-link-box">
+<a href="https://youtu.be/Td1VHqZAfoU" target="_blank" class="trailer-link-box">
 
     <div class="trailer-text"><span>▶</span> LOT-III FULL MOVIE</div>
 
@@ -1004,6 +1004,7 @@ window.closePopup = () => {
 </script>
 </body>
 </html>
+
 
 
 
